# harm-directions

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  Makefile  README.md  detect.py  pyproject.toml  reproduce.py  requirements.txt
.github/workflows/: ci.yml
experiments/: baseline_comparison.py  generate_figure_artifacts.py  make_angle_figure.py  make_auroc_vs_tpr_figure.py  make_full_results_tables.py  make_full_transfer_table.py  make_heatmaps.py  make_layer_profile_figure.py  make_ood_tables.py  make_scale_table.py  make_score_distribution_figure.py  make_stability_analysis.py  run_g1_chat_template.py  run_g2_arditi_angle.py  run_g3_arditi_projected_refit.py  run_g4_self_projected_refit.py  run_g5_cross_protocol_refit.py
latent_biopsy/: __init__.py  evaluation.py  extraction.py
scripts/: cross_variant_transfer.py  download_datasets.py
src/harm_directions/: __init__.py  directions.py  evaluation.py  extraction.py
src/harm_directions/cli/: detect.py  reproduce.py
tests/: test_core.py
