[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ============================================================================
# Project metadata
# ============================================================================

[project]
name = "harm-directions"
version = "0.1.0"
description = "Linear harm-direction recovery from LLM residual streams."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Isaac Llorente-Saguer" },
]
keywords = [
    "llm",
    "safety",
    "interpretability",
    "activation-probing",
    "residual-stream",
    "harmful-intent-detection",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "numpy>=1.24",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
# Activation extraction from transformer models (heavy)
extract = [
    "torch>=2.1,<3.0",
    "transformers>=5.3,<6.0",
]

# Dataset download and preprocessing
datasets = [
    "datasets>=2.18",
    "pandas>=2.0",
    "requests>=2.28",
]

# Plotting and progress for the reproduction pipeline
plotting = [
    "matplotlib>=3.7",
    "tqdm>=4.65",
]

# Full paper reproduction (everything the pipeline needs)
reproduce = [
    "harm-directions[extract,datasets,plotting]",
]

# Development without torch: linting, type-checking, core tests
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.8",
    "pre-commit>=3.6",
]

# Development with everything (for local work that touches extraction code)
dev-full = [
    "harm-directions[reproduce,dev]",
]

[project.urls]
Homepage = "https://github.com/isaac-6/harm-directions"
Paper = "https://github.com/isaac-6/harm-directions"
Repository = "https://github.com/isaac-6/harm-directions"
Issues = "https://github.com/isaac-6/harm-directions/issues"

[project.scripts]
harm-directions-reproduce = "harm_directions.cli.reproduce:main"
harm-directions-detect = "harm_directions.cli.detect:main"

# ============================================================================
# Build configuration (hatchling)
# ============================================================================

[tool.hatch.build.targets.wheel]
packages = ["src/harm_directions"]

[tool.hatch.build.targets.sdist]
include = [
    "src/harm_directions",
    "tests",
    "scripts",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

# ============================================================================
# Ruff: linting and formatting
# ============================================================================

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "N803",  # argument name should be lowercase (we use X, Y for matrices)
    "N806",  # variable in function should be lowercase (same)
    "RUF002",  # docstrings use Greek letters for math notation
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]  # allow `assert` in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ============================================================================
# Mypy: static type checking
# ============================================================================

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true

# Third-party libraries without stubs
[[tool.mypy.overrides]]
module = [
    "sklearn.*",
    "transformers.*",
    "datasets.*",
    "matplotlib.*",
    "pandas.*",
    "tqdm.*",
    "torch.*",
    "torch",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "harm_directions.cli.reproduce",
    "harm_directions.cli.detect",
]
disable_error_code = ["arg-type"]

# ============================================================================
# Pytest
# ============================================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "requires_gpu: marks tests that need a GPU",
    "requires_download: marks tests that download data/models",
]

# ============================================================================
# Coverage
# ============================================================================

[tool.coverage.run]
source = ["src/harm_directions"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]